# et-connector

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  app.manifest  resources.qrc
.github/workflows/: build-master.yml  build-pr.yml
.workflow/: branch-pipeline.yml  master-pipeline.yml
assets/: Info.plist.in  build_daemon.sh  collect-daemon.sh  easytier-connector.service  etconnector.desktop  resources.qrc
docs/: 常见问题.md  开发指南.md  快速开始.md  配置说明.md
favicon/: favicon-open.icns  favicon.icns
package/linux/aur/: README.md  build_aur.sh
package/linux/deb/: build_deb.sh
package/linux/deb/DEBIAN/: control
package/linux/deb/usr/share/applications/: etconnector.desktop
package/macos/: build_dmg.sh
package/windows/: build_win.ps1  innosetup.iss  introduction.rtf
src/: AboutDialog.cpp  AboutDialog.h  CasdoorLogin.cpp  CasdoorLogin.h  ConfigManager.cpp  ConfigManager.h  ConnectionController.cpp  ConnectionController.h  ETRunService.cpp  ETRunService.h  IpcClient.cpp  IpcClient.h  QuitConfirmDialog.cpp  QuitConfirmDialog.h  SettingsDialog.cpp  SettingsDialog.h  SystemTray.cpp  SystemTray.h  main.cpp
superpowers-iflow/brainstorming/: SKILL.md
superpowers-iflow/dispatching-parallel-agents/: SKILL.md
superpowers-iflow/executing-plans/: SKILL.md
superpowers-iflow/finishing-a-development-branch/: SKILL.md
superpowers-iflow/receiving-code-review/: SKILL.md
superpowers-iflow/requesting-code-review/: SKILL.md
superpowers-iflow/subagent-driven-development/: SKILL.md
superpowers-iflow/systematic-debugging/: SKILL.md
superpowers-iflow/test-driven-development/: SKILL.md
superpowers-iflow/using-git-worktrees/: SKILL.md
superpowers-iflow/verification-before-completion/: SKILL.md
superpowers-iflow/writing-plans/: SKILL.md
superpowers-iflow/writing-skills/: SKILL.md
